[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/World/ButtonPuzzle.gd" type="Script" id=1]
[ext_resource path="res://Scripts/World/Button.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Buttons/Button0.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Buttons/Button1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Buttons/Button2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Buttons/Button3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Buttons/Button4.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Buttons/Button5.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Buttons/Button6.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Buttons/Button7.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 20.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="ButtonPuzzle" type="Node2D"]
script = ExtResource( 1 )

[node name="Button1" type="Area2D" parent="."]
position = Vector2( -130, 130 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Button1"]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button1"]
shape = SubResource( 2 )

[node name="Button2" type="Area2D" parent="."]
position = Vector2( 130, -130 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Button2"]
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button2"]
shape = SubResource( 2 )

[node name="Button3" type="Area2D" parent="."]
position = Vector2( -130, -130 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Button3"]
frames = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button3"]
shape = SubResource( 2 )

[node name="Button4" type="Area2D" parent="."]
position = Vector2( 130, 130 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Button4"]
frames = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button4"]
shape = SubResource( 2 )

